# iwyu_samples

./: CMakeLists.txt  iwyu_tool.py  run_iwyu.sh
src/: main.cpp
src/shared_ptr/: A.h  B.cpp  B.h
